@@ -1,4 +1,4 @@
 DIST granite-5.2.4.tar.gz 390145 BLAKE2B 30abee1669bf2211aa776a5ddf38b914bc95e466f2853f4e852b77947b666c06ce8ac77a47b22bce0cdbf8e6804935007b5cef700c49db302528b7bbb0063543 SHA512 3a52a92a49f887bb802754b99b7c9c3fd13c197c74da7c25f1fd4c03b76d916197079b813909d2cceb11cb10b26e9f64978563b95319d0c744c5b612c50ce306
-EBUILD granite-5.2.4.ebuild 903 BLAKE2B b026b1b65ee643211699062d298fdff86c6b22c124720733254658f5eea44f8dcfeb8e1ce035f7e84c456a52a7e4a7fc2f66ef1aa02710f73d9ffe9d11a80bfe SHA512 573d67e41f766dd8d0c6863e0bf5680a563950f551fbb43e03156ad37548573542a9a60061c10832d01ecf495299224c82184c8a09a45aa0601a973507c52c24
-MISC ChangeLog 244 BLAKE2B 8ab2691276ae8c38b81d294872252b2c0daa65f3251c56405f8127b425051f431ff08ab6a27e55e8c2f5690913133e23c6a9078a36040753ae2fa586a1a5c0d9 SHA512 24ac934408078834fcb4fc24d4f3693fe9e8d2a684285baa732e03fbb6bf6c0878e76d3bd97571a62d303cf2c3ba511ca35ddd858340353b19f7f7952a682318
+EBUILD granite-5.2.4.ebuild 811 BLAKE2B aaa81023b47329cd82c9c89a55291bf984f7a7a223775ec6ce9eb34431be0b7097250e4aa6ccdc81b5d1b5b26684675be620951da33cd67bff523601573d0703 SHA512 3c044662935eece4589f60b387c21b3d91f9c2dd5124ff630e5313b4a3204f820a745ad69f951d9b5b09faa39e34016b79451a41e881f3584f4b45a3353fe4be
+MISC ChangeLog 339 BLAKE2B b328e640bfcabcad14cc94e58c4813e68f9943498d3ca73417fc370f25eb5dd7752e31f74eb5a6796beb6f7ff338e16f4044f47fce4df1f7f4e89fb462e6de13 SHA512 0c386156123854c13ad7140198cafb9c9b1f4d1e801bbbf31914e2e16a90ccbc215d55be83235587c20b9a0d6e40f8856e1832be19e16217cdb0bd601e5063e3
 MISC metadata.xml 563 BLAKE2B 1bfeeb790fbacf5024fcc6b0492dc88905ac469bf326262d5b1fa53336122d39c735100285341b92a9190b1625f1b747237b80a0800798d0b0a3fe85af1175c1 SHA512 4fcca87a2fa2597187539812749ab74e5391cc7330899251e96611737cee83df7522f83d10c9aef7da41decbd2538ab50f07dd497783fe1db0a17464cadb89a8
