@@ -1,3 +1,6 @@
+  14 Aug 2019;  <bemeurer@gentoo.org> granite-5.2.4.ebuild:
+  dev-libs/granite: Juippis fixes
+
   13 Aug 2019;  <bemeurer@gentoo.org> granite-5.2.4.ebuild:
   dev-libs/granite: gnome2-utils -> xdg-utils
 
